<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, JukeboxActivity!</string>
    <string name="app_name">Jukebox</string>
    <color name="myColor">#3399CC</color>
    <string name="myClickHandler">myClickHandler</string>
    <string name="onConnectClickHandler">onConnectClickHandler</string>
    <string name="defaultServerIpAddress">192.168.1.100</string>
    <string name="movieIconDescription">Movie icon</string>
    <string name="btnPlay">Play</string>
    <string name="btnStop">Stop</string>
    <string name="btnPause">Pause</string>
    <string name="btnWakeup">Wakeup</string>
    <string name="btnFullscreen">Toggle fullscreen</string>
    <string name="btnViewInfo">View info</string>
    <string name="lblTitle">Title</string>
    <string name="lblYear">Year</string>
    <string name="lblStory">Story</string>
    <string name="lblGenre">Genre</string>
    <string name="lblDirector">Director</string>
    <string name="lblDuration">Duration</string>
    <string name="lblRating">Rating</string>
    <string name="lblConnect">Connect</string>
    <string name="lblSelectMediaPlayer">Player</string>
    <string name="lblMediaPlayerName">Media player</string>
    <string name="lblContentRefresh">Refresh</string>
    <string name="descSelect">Select</string>
    <string name="descPosterImage">Poster image</string>
    <string name="lblFilename">Filename</string>
    <string name="descViewInfo">View IMDB info</string>
    <string name="btnSubselect">Select subs</string>
    <string name="btnSubOk">OK</string>
    <string name="btnSubNotOk">Not OK</string>
    <string name="lblSeekBarIndicator">00:00</string>
    <string name="descDownloading">Downloading</string>
    <string name="lblSubtitleName">Name of subtitle</string>
    <string name="descProbableMatch">Probable match</string>
    <string name="descPositiveMatch">Positive match</string>
    <string name="descExactMatch">Exact match</string>
    <string name="descSubsExist">Subtitles exist</string>
    <string name="lblSubtitleLanguage">LANG</string>
    <string name="descWatched">Watched</string>
</resources>
