<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">    

    <TextView android:id="@+id/txtSubName" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblSubtitleName"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <ImageView android:id="@+id/imgSubRatingSubsExist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/descSubsExist"/>
    
    <ImageView android:id="@+id/imgSubRatingExact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/imgSubRatingSubsExist"
        android:contentDescription="@string/descExactMatch"/>
    
    <ImageView android:id="@+id/imgSubRatingPositive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/imgSubRatingExact"
        android:contentDescription="@string/descPositiveMatch"/>
    
    <ImageView android:id="@+id/imgSubRatingProbable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/imgSubRatingPositive"
        android:contentDescription="@string/descProbableMatch"/>
    
</RelativeLayout>