<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


       <Button
          android:id="@+id/btnPlay"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/btnPlay"
          android:onClick="onButtonClicked" />

       <Button
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPause"
            android:onClick="onButtonClicked" />
       
        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStop"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/btnWakeup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnWakeup"
            android:onClick="onButtonClicked" />

        <Button
            android:id="@+id/btnFullscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnFullscreen"
            android:onClick="onButtonClicked" />        
    </LinearLayout>

</LinearLayout>