<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|clip_vertical|fill_horizontal"
    android:orientation="vertical" 
    android:id="@+id/rootSubSelect">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/imgSubPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/descPosterImage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textViewYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblYear"
                android:textAppearance="?android:attr/textAppearanceMedium" />
                    
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btnSubOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicked" 
                android:text="@string/btnSubOk" />

            <Button
                android:id="@+id/btnSubNotOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicked" 
                android:text="@string/btnSubNotOk" />
            
	        <Button
	            android:id="@+id/btnFullscreen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/btnfullscreen"
	            android:onClick="onButtonClicked"
			/>
	        
                        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal" >

    </LinearLayout>

    <TextView
        android:id="@+id/textViewFilename"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblFilename"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:paddingTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="4dp"        
        android:layout_below="@id/linearLayout2"/>

    <SeekBar
        android:id="@+id/seekBarDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutButtons1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:max="1000"
        android:progress="0" />

    <TextView
        android:id="@+id/txtSeekIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBarDuration"
        android:layout_centerHorizontal="true"
        android:text="@string/lblSeekBarIndicator"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>